[gd_scene load_steps=9 format=3 uid="uid://1fxcxdjc2spp"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_b1kex"]
[ext_resource type="Texture2D" uid="uid://df57xq8f4hlds" path="res://Mini Pixel Pack 3/Enemies/Bon_Bon (16 x 16).png" id="2_cs538"]
[ext_resource type="Texture2D" uid="uid://bnv3fatreqfqg" path="res://Mini Pixel Pack 3/Effects/Explosion (16 x 16).png" id="3_e5na8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yvw0m"]
size = Vector2(14, 8)

[sub_resource type="Animation" id="Animation_5n67m"]
resource_name = "Bounce"
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cs538")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 0, 3, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.211825),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_gtsy7"]
resource_name = "Explode"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_e5na8")]
}

[sub_resource type="Animation" id="Animation_rt56v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_cs538")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rjmvg"]
_data = {
"Bounce": SubResource("Animation_5n67m"),
"Explode": SubResource("Animation_gtsy7"),
"RESET": SubResource("Animation_rt56v")
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
position = Vector2(55, 25)
script = ExtResource("1_b1kex")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cs538")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_yvw0m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Bounce"
libraries = {
"": SubResource("AnimationLibrary_rjmvg")
}

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
